# obs-mtg-card-search

./: .gitignore  CMakeLists.txt  README.md  mtg-card-search.cpp
